--- a/BILLEE/README.me
+++ b/BILLEE/README.me
@@ -1,1 +1,4 @@
-# These are the packages that I have created for the BILLEE Rover project.
+These are the packages that I have created for the BILLEE Rover project
+
+
+I am actively developing this using ROS2 Humble on a Jetson Orin Nano
